# grpc-showcase

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  cert_gen.sh  docker-compose.yml
.github/workflows/: pipeline.yml
grpc-codegen/: Cargo.toml  build.rs
grpc-codegen/proto/: key_value_storage.proto
grpc-codegen/src/: lib.rs
grpc-store/: Cargo.toml  Dockerfile
grpc-store/src/: main.rs
rest-api/: Cargo.toml  Dockerfile  build.rs
rest-api/src/: main.rs
rest-api/src/tests/: mod.rs  utils.rs
shared-resources/proto/: key_value_store.proto
tests/: Cargo.toml  e2e_test.rs  happy_path_integration_test.rs
