[package]
name = "grpc-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "1.2.0"
rustls-pemfile = "2.1.1"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"
tower = "0.4.13"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
prost = "0.12"

[dependencies.grpc-codegen]
path = "../grpc-codegen"


[dev-dependencies]
anyhow = "1.0.81"


[build-dependencies]
tonic-build = "0.11"
