[package]
name = "grpc-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["tls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
prost = "0.12"

[dependencies.grpc-codegen]
path = "../grpc-codegen"


[dev-dependencies]
anyhow = "1.0.81"


[build-dependencies]
tonic-build = "0.11"
