[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
features = "0.10.0"
hyper = { version = "1.2.0", features = ["http1", "http2", "full"] }
rustls-pemfile = "2.1.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-rustls = "0.25.0"
tonic = "0.11.0"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
prost = "0.12"
anyhow = "1.0.81"
axum-macros = "0.4.1"
serde = { version = "1.0.197", features = ["derive"] }

[dependencies.grpc-codegen]
path = "../grpc-codegen"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
mime = "0.3.17"
tokio-stream = { version = "0.1.14", features = ["net"] }
tower = "0.4.13"
