[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
hyper = { version = "1.2.0", features = ["http1", "http2", "full"] }
tokio = { version = "1.36.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["tls", "transport"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.81"
prost = "0.12"
serde = { version = "1.0.197", features = ["derive"] }
tokio-rustls = "0.25.0"
[dependencies.grpc-codegen]
path = "../grpc-codegen"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
mime = "0.3.17"
tokio-stream = { version = "0.1.14", features = ["net"] }
tower = "0.4.13"
  