[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
rest-api = { path = "../rest-api" }
grpc-store = { path = "../grpc-store" }
testcontainers = "0.15.0"
anyhow = "1.0.81"

[[test]]
name = "happy_path_integration_test"
path = "happy_path_integration_test.rs"

