[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
anyhow = "1.0.81"
reqwest = { version = "0.11.26", features = ["json", "rustls-tls"] }
serde_json = "1.0.114"
futures = "0.3.30"
tracing = "0.1.40"
tracing-test = "0.2.4"

[[test]]
name = "e2e_test"
path = "e2e_test.rs"

